@@ -5,9 +5,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.List;
 
 public class MyUserDetails implements UserDetails {
 
@@ -19,10 +18,7 @@ public class MyUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(account.getAuthorities())
-                .stream()
-                .map(au -> new SimpleGrantedAuthority(au))
-                .collect(Collectors.toList());
+        return List.of(new SimpleGrantedAuthority(account.getRole()));
     }
 
     @Override
